Closed Bug 643272 Opened 15 years ago Closed 15 years ago

TI: Assertion failure: isGet(), at ./methodjit/PolyIC.h:518

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Unassigned)

References

Details

(Keywords: assertion, testcase)

Attachments

(1 file)

The attached testcase either crashes or asserts on TI tip (tested on 64 bit). The original testcase crashed in [JSC::X86Assembler::cmpl_im], the reduce testcase here asserts instead. The test itself is fragile, minimization was only possible while keeping the lengths of all filenames involved.
Recompilations could be triggered by obj->lookupProperty (e.g. by resolve hooks creating prototype objects for scripted functions), which the IC code did not anticipate and needs to watch for. http://hg.mozilla.org/projects/jaegermonkey/rev/133a01a817de
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: