[INFER] Handle recompilations triggered in ICs by obj->lookupProperty, bug 643272.